tweaked navitem anchor-area/font; swapped backgrounds

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="navbar-backing">
       <div class="navbar">
         <ul class="navlist">
-          <li class="navitem active" id="navitem-home"><a href="#home">Home</a></li>
-          <li class="navitem" id="navitem-do"><a href="#do">What We Do</a></li>
-          <li class="navitem" id="navitem-done"><a href="#done">What We've Done</a></li>
-          <li class="navitem" id="navitem-aboutus"><a href="#aboutus">About Us</a></li>
+          <a href="#home"><li class="navitem active" id="navitem-home">Home</li></a>
+          <a href="#do"><li class="navitem" id="navitem-do">What We Do</li></a>
+          <a href="#done"><li class="navitem" id="navitem-done">What We've Done</li></a>
+          <a href="#aboutus"><li class="navitem" id="navitem-aboutus">About Us</li></a>
         </ul>
       </div>
     </div>
@@ -131,7 +131,7 @@
       </div>
     </section>
 
-    <section class="section-about-us background-bw" id="section-aboutus">
+    <section class="section-about-us background-bw display" id="section-aboutus">
       <div class="container">
         <div class="aboutus-img">
           <img src='./images/About Us/Our Past.JPG'>
