Background change; slide anim fix; add hamburger
- Changed background to conference hall.
- fixed sections sliding off screen having wrong sizing/position
- added hamburger menu for smaller screens

--- a/index.html
+++ b/index.html
@@ -17,12 +17,27 @@
   <header>
     <div class="navbar-backing">
       <div class="navbar">
-        <ul class="navlist">
-          <a href="#home"><li class="navitem active" id="navitem-home">Home</li></a>
-          <a href="#do"><li class="navitem" id="navitem-do">What We Do</li></a>
-          <a href="#done"><li class="navitem" id="navitem-done">What We've Done</li></a>
-          <a href="#aboutus"><li class="navitem" id="navitem-aboutus">About Us</li></a>
-        </ul>
+        <div class="hamburger">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+          </svg>
+        </div>
+        <div class="hamburger-nav">
+          <ul class="navlist-vert">
+            <a href="#home"><li class="navitem active navitem-home">Home</li></a>
+            <a href="#do"><li class="navitem navitem-do">What We Do</li></a>
+            <a href="#done"><li class="navitem navitem-done">What We've Done</li></a>
+            <a href="#aboutus"><li class="navitem navitem-aboutus">About Us</li></a>
+          </ul>
+        </div>
+        <div class="navlinks">
+          <ul class="navlist">
+            <a href="#home"><li class="navitem active navitem-home">Home</li></a>
+            <a href="#do"><li class="navitem navitem-do">What We Do</li></a>
+            <a href="#done"><li class="navitem navitem-done">What We've Done</li></a>
+            <a href="#aboutus"><li class="navitem navitem-aboutus">About Us</li></a>
+          </ul>
+        </div>
       </div>
     </div>
   </header>
