standard background class extracted; collapse menu tweaked

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Just Loud Productions</title>
 </head>
 
-<body>
+<body class="background">
   <header>
     <div class="navbar-backing">
       <div class="navbar">
@@ -23,7 +23,7 @@
           </svg>
         </div>
         <div class="hamburger-nav">
-          <ul class="navlist-vert">
+          <ul class="navlist-vert background">
             <a href="#home"><li class="navitem active navitem-home">Home</li></a>
             <a href="#do"><li class="navitem navitem-do">What We Do</li></a>
             <a href="#done"><li class="navitem navitem-done">What We've Done</li></a>
